Refactorizadas las páginas de error.

--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -389,6 +389,8 @@
     "data-source": "Datenquelle",
     "database": "Datenbank",
     "database-error": "Fehler bei der Verbindung zur Datenbank",
+    "database-error-pc": "🖥️ Si el programa está instalado en tu PC, probablemente se te haya olvidado activar MySQL o tenga problemas para activarse.",
+    "database-error-server": "🌎 si el programa está instalado en un servidor o hosting, probablemente hayas cambiado el usuario o contraseña de la base de datos, o hayas llegado a algún límite de uso del hosting.",
     "database-name-must-be-lowercase": "Der Dateiname muss in Kleinbuchstaben sein",
     "date": "Datum",
     "date-in": "Datum in",
@@ -805,6 +807,8 @@
     "invalid-iso-code": "Ungültiger ISO-Code ''%iso-code%",
     "invalid-number": "Ungültige Nummer",
     "invalid-request": "Antrag nicht gültig",
+    "invalid-token": "Token no válido",
+    "invalid-token-p": "El token de acceso para el archivo %file% no es válido o ha caducado",
     "invalid-user-can-permission": "Ungültige Berechtigung: %permission%. Die verfügbaren Berechtigungen sind access, delete, export, import, update und only-owner-data.",
     "invalid-web": "Ungültige Webadresse",
     "invoice": "Rechnung",
@@ -1617,7 +1621,7 @@
     "tuesday": "Dienstag",
     "two-factor-auth": "Zwei-Faktor-Authentifizierung",
     "two-factor-auth-disable": "Desactivar autenticación en 2 pasos",
-    "two-factor-auth-disabled": "Autenticación en 2 pasos desactivada",
+    "two-factor-auth-disabled": "Zwei-Faktor-Authentifizierung deaktiviert",
     "two-factor-auth-enable": "Aktivieren Sie die 2-Faktor-Authentifizierung",
     "two-factor-auth-enabled": "Die Zwei-Faktor-Authentifizierung ist aktiviert.",
     "two-factor-auth-p": "Configura la app Google Authenticator usando el QR, introduce aquí el código y pulsa verificar para completar el proceso de activación.",
@@ -1648,6 +1652,8 @@
     "unlink-install-ok": "Installation erfolgreich aus dem Register gelöscht.",
     "unlock-entry": "Eintrag entsperren",
     "unpaid": "Unbezahlt",
+    "unsafe-file": "Archivo no seguro",
+    "unsafe-file-p": "Por motivos de seguridad impedimos las descargas de algunos tipos de archivos, como este: %file%",
     "until-accounting-entry": "Bis Buchung",
     "until-date": "bis-Datum",
     "until-subaccount": "Bis Unterkonto",
