--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -389,6 +389,8 @@
     "data-source": "Origin data",
     "database": "Database",
     "database-error": "Error connecting to the database",
+    "database-error-pc": "🖥️ Si el programa está instalado en tu PC, probablemente se te haya olvidado activar MySQL o tenga problemas para activarse.",
+    "database-error-server": "🌎 si el programa está instalado en un servidor o hosting, probablemente hayas cambiado el usuario o contraseña de la base de datos, o hayas llegado a algún límite de uso del hosting.",
     "database-name-must-be-lowercase": "The database name must be lowercase",
     "date": "Date",
     "date-in": "Date in",
@@ -805,6 +807,8 @@
     "invalid-iso-code": "Invalid ISO code ''%iso-code%''.",
     "invalid-number": "Invalid number: %number%",
     "invalid-request": "Invalid request",
+    "invalid-token": "Token no válido",
+    "invalid-token-p": "El token de acceso para el archivo %file% no es válido o ha caducado",
     "invalid-user-can-permission": "Permiso no válido: %permission%. Los permisos disponibles son access, delete, export, import, update y only-owner-data.",
     "invalid-web": "Invalid web address: %web%",
     "invoice": "Invoice",
@@ -1049,7 +1053,7 @@
     "no-gaps-found": "No gaps found",
     "no-invoice": "No invoice",
     "no-outstanding-amount": "There is no outstanding amount",
-    "no-plugins-installed": "No hay plugins instalados",
+    "no-plugins-installed": "No plugins installed",
     "no-print-permission": "You do not have permission to print or export",
     "no-reference": "No reference",
     "no-selected-item": "No selected item",
@@ -1618,9 +1622,9 @@
     "two-factor-auth": "2-step authentication",
     "two-factor-auth-disable": "Disable two-factor authentication",
     "two-factor-auth-disabled": "Two-factor authentication disabled",
-    "two-factor-auth-enable": "Activar autenticación en 2 pasos",
+    "two-factor-auth-enable": "Enable two-factor authentication",
     "two-factor-auth-enabled": "Two-factor authentication enabled",
-    "two-factor-auth-p": "Configura la app Google Authenticator usando el QR, introduce aquí el código y pulsa verificar para completar el proceso de activación.",
+    "two-factor-auth-p": "Set up the Google Authenticator app using the QR code, enter the code here, and click verify to complete the activation process.",
     "two-factor-code": "Two-factor code",
     "two-factor-enabled": "Enable 2-Step Authentication",
     "type": "Type",
@@ -1648,6 +1652,8 @@
     "unlink-install-ok": "Installation cleared registry successfully.",
     "unlock-entry": "Unlock",
     "unpaid": "Unpaid",
+    "unsafe-file": "Archivo no seguro",
+    "unsafe-file-p": "Por motivos de seguridad impedimos las descargas de algunos tipos de archivos, como este: %file%",
     "until-accounting-entry": "Until entry",
     "until-date": "Until date",
     "until-subaccount": "Until subaccount",
