--- a/Core/Translation/es_AR.json
+++ b/Core/Translation/es_AR.json
@@ -389,6 +389,8 @@
     "data-source": "Datos de origen",
     "database": "Base de datos",
     "database-error": "Error al conectar a la base de datos",
+    "database-error-pc": "🖥️ Si el programa está instalado en tu PC, probablemente se te haya olvidado activar MySQL o tenga problemas para activarse.",
+    "database-error-server": "🌎 si el programa está instalado en un servidor o hosting, probablemente hayas cambiado el usuario o contraseña de la base de datos, o hayas llegado a algún límite de uso del hosting.",
     "database-name-must-be-lowercase": "El nombre de la base de datos debe ser en minúsculas",
     "date": "Fecha",
     "date-in": "Fecha entrada",
@@ -805,6 +807,8 @@
     "invalid-iso-code": "Código ISO '%iso-code%' no válido",
     "invalid-number": "Número no válido: %number%",
     "invalid-request": "Petición no válida",
+    "invalid-token": "Token no válido",
+    "invalid-token-p": "El token de acceso para el archivo %file% no es válido o ha caducado",
     "invalid-user-can-permission": "Permiso no válido: %permission%. Los permisos disponibles son access, delete, export, import, update y only-owner-data.",
     "invalid-web": "Dirección web no válida: %web%",
     "invoice": "Factura",
@@ -1648,6 +1652,8 @@
     "unlink-install-ok": "Instalación borrada del registro correctamente.",
     "unlock-entry": "Desbloquear",
     "unpaid": "Impagado",
+    "unsafe-file": "Archivo no seguro",
+    "unsafe-file-p": "Por motivos de seguridad impedimos las descargas de algunos tipos de archivos, como este: %file%",
     "until-accounting-entry": "Hasta asiento",
     "until-date": "Hasta",
     "until-subaccount": "Hasta subcuenta",
