--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -389,6 +389,8 @@
     "data-source": "Données d'origine",
     "database": "Base de données",
     "database-error": "Erreur de connexion à la base de données",
+    "database-error-pc": "🖥️ Si el programa está instalado en tu PC, probablemente se te haya olvidado activar MySQL o tenga problemas para activarse.",
+    "database-error-server": "🌎 si el programa está instalado en un servidor o hosting, probablemente hayas cambiado el usuario o contraseña de la base de datos, o hayas llegado a algún límite de uso del hosting.",
     "database-name-must-be-lowercase": "Le nom de la base de données doit être en minuscules",
     "date": "Date",
     "date-in": "Date dans",
@@ -805,6 +807,8 @@
     "invalid-iso-code": "Code ISO '%iso-code%' invalide.",
     "invalid-number": "Nombre incorrect : %number%",
     "invalid-request": "Requête incorrecte",
+    "invalid-token": "Token no válido",
+    "invalid-token-p": "El token de acceso para el archivo %file% no es válido o ha caducado",
     "invalid-user-can-permission": "Permission non valide : %permission%. Les autorisations disponibles sont access, delete, export, import, update et only-owner-data.",
     "invalid-web": "Dirección web no válida",
     "invoice": "facture",
@@ -903,7 +907,7 @@
     "library": "Bibliothèque",
     "license": "Licence",
     "like-than": "Comme",
-    "limits": "Límites",
+    "limits": "Limites",
     "line": "Ligne",
     "lines": "Lignes",
     "linux": "Linux",
@@ -1621,7 +1625,7 @@
     "two-factor-auth-enable": "Activer l'authentification à deux facteurs",
     "two-factor-auth-enabled": "Authentification à 2 facteurs activée",
     "two-factor-auth-p": "Configurez l'application Google Authenticator en utilisant le QR, entrez le code ici et appuyez sur vérifier pour compléter le processus d'activation.",
-    "two-factor-code": "Código de doble factor",
+    "two-factor-code": "Code à double facteur",
     "two-factor-enabled": "Activer l’authentification à deux facteurs",
     "type": "Type",
     "type-alert": "Type alerte",
@@ -1648,6 +1652,8 @@
     "unlink-install-ok": "L'installation a été supprimée avec succès du registre.",
     "unlock-entry": "Déverrouiller",
     "unpaid": "Non payé",
+    "unsafe-file": "Archivo no seguro",
+    "unsafe-file-p": "Por motivos de seguridad impedimos las descargas de algunos tipos de archivos, como este: %file%",
     "until-accounting-entry": "Jusqu'à l'entrée",
     "until-date": "Jusqu'à la date",
     "until-subaccount": "Jusqu'au sous-compte",
