--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -389,6 +389,8 @@
     "data-source": "Datos de orixe",
     "database": "Base de datos",
     "database-error": "Erro ó conectar á base de datos",
+    "database-error-pc": "🖥️ Si el programa está instalado en tu PC, probablemente se te haya olvidado activar MySQL o tenga problemas para activarse.",
+    "database-error-server": "🌎 si el programa está instalado en un servidor o hosting, probablemente hayas cambiado el usuario o contraseña de la base de datos, o hayas llegado a algún límite de uso del hosting.",
     "database-name-must-be-lowercase": "O nome da base de datos debe ser en minúsculas",
     "date": "Data",
     "date-in": "Data en",
@@ -805,6 +807,8 @@
     "invalid-iso-code": "Código ISO '%iso-code%' non válido",
     "invalid-number": "Número non válido: %number%",
     "invalid-request": "Petición non válida",
+    "invalid-token": "Token no válido",
+    "invalid-token-p": "El token de acceso para el archivo %file% no es válido o ha caducado",
     "invalid-user-can-permission": "Permiso non válido: %permission%. Os permisos dispoñibles son access, delete, export, import, update e only-owner-data.",
     "invalid-web": "Enderezo web non válido",
     "invoice": "Factura",
@@ -1621,7 +1625,7 @@
     "two-factor-auth-enable": "Activar autenticación en 2 pasos",
     "two-factor-auth-enabled": "Autenticación en 2 pasos activada",
     "two-factor-auth-p": "Configura a app Google Authenticator usando o QR, introduce aquí o código e pulsa verificar para completar o proceso de activación.",
-    "two-factor-code": "Código de doble factor",
+    "two-factor-code": "Código de dobre factor",
     "two-factor-enabled": "Activar a autenticación en dous pasos",
     "type": "Tipo",
     "type-alert": "Tipo alert",
@@ -1648,6 +1652,8 @@
     "unlink-install-ok": "Instalación borrada do rexistro corretamente.",
     "unlock-entry": "Desbloquear",
     "unpaid": "Impagado",
+    "unsafe-file": "Archivo no seguro",
+    "unsafe-file-p": "Por motivos de seguridad impedimos las descargas de algunos tipos de archivos, como este: %file%",
     "until-accounting-entry": "Ata asento",
     "until-date": "Ata (data)",
     "until-subaccount": "Ata subconta",
