--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -389,6 +389,8 @@
     "data-source": "Origine dei dati",
     "database": "Database",
     "database-error": "Errore di connessione al database",
+    "database-error-pc": "🖥️ Si el programa está instalado en tu PC, probablemente se te haya olvidado activar MySQL o tenga problemas para activarse.",
+    "database-error-server": "🌎 si el programa está instalado en un servidor o hosting, probablemente hayas cambiado el usuario o contraseña de la base de datos, o hayas llegado a algún límite de uso del hosting.",
     "database-name-must-be-lowercase": "il-nome-del-database-deve-essere-maiuscolo",
     "date": "data",
     "date-in": "Data in",
@@ -805,6 +807,8 @@
     "invalid-iso-code": "Codice ISO '%iso-code%' non valido",
     "invalid-number": "Numero non valido: %number%",
     "invalid-request": "Richiesta non valida",
+    "invalid-token": "Token no válido",
+    "invalid-token-p": "El token de acceso para el archivo %file% no es válido o ha caducado",
     "invalid-user-can-permission": "Permesso non valido: %permission%. I permessi disponibili sono access, delete, export, import, update e only-owner-data.",
     "invalid-web": "Indirizzo web non valido: %web%",
     "invoice": "fattura",
@@ -1648,6 +1652,8 @@
     "unlink-install-ok": "Disinstallazione cancellata dal registro correttamente.",
     "unlock-entry": "Sblocca",
     "unpaid": "non pagato",
+    "unsafe-file": "Archivo no seguro",
+    "unsafe-file-p": "Por motivos de seguridad impedimos las descargas de algunos tipos de archivos, como este: %file%",
     "until-accounting-entry": "Fino alla registrazione contabile",
     "until-date": "Fino a",
     "until-subaccount": "Fino a subconto",
