--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -389,6 +389,8 @@
     "data-source": "Źródła danych",
     "database": "Baza danych",
     "database-error": "Błąd połączenia z bazą danych",
+    "database-error-pc": "🖥️ Si el programa está instalado en tu PC, probablemente se te haya olvidado activar MySQL o tenga problemas para activarse.",
+    "database-error-server": "🌎 si el programa está instalado en un servidor o hosting, probablemente hayas cambiado el usuario o contraseña de la base de datos, o hayas llegado a algún límite de uso del hosting.",
     "database-name-must-be-lowercase": "Nazwa bazy danych musi być pisana małymi literami",
     "date": "Data",
     "date-in": "Data wejścia",
@@ -805,6 +807,8 @@
     "invalid-iso-code": "Nieprawidłowy kod ISO '%iso-code%'",
     "invalid-number": "Nieprawidłowy numer: %number%",
     "invalid-request": "Nieprawidłowe żądanie",
+    "invalid-token": "Token no válido",
+    "invalid-token-p": "El token de acceso para el archivo %file% no es válido o ha caducado",
     "invalid-user-can-permission": "Nieprawidłowe uprawnienie: %permission%. Dostępne uprawnienia to: dostęp, usuwanie, eksport, import, aktualizacja i tylko-dane-właściciela.",
     "invalid-web": "Nieprawidłowy adres sieciowy: %web%",
     "invoice": "Faktura",
@@ -1648,6 +1652,8 @@
     "unlink-install-ok": "Instalacja została pomyślnie usunięta z rejestru.",
     "unlock-entry": "Odblokować",
     "unpaid": "Nieopłacone",
+    "unsafe-file": "Archivo no seguro",
+    "unsafe-file-p": "Por motivos de seguridad impedimos las descargas de algunos tipos de archivos, como este: %file%",
     "until-accounting-entry": "Do wpisu księgowego",
     "until-date": "Do",
     "until-subaccount": "Do subkonta",
