--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -389,6 +389,8 @@
     "data-source": "Dados de origem",
     "database": "Base de dados",
     "database-error": "Erro ao conectar à base de dados",
+    "database-error-pc": "🖥️ Si el programa está instalado en tu PC, probablemente se te haya olvidado activar MySQL o tenga problemas para activarse.",
+    "database-error-server": "🌎 si el programa está instalado en un servidor o hosting, probablemente hayas cambiado el usuario o contraseña de la base de datos, o hayas llegado a algún límite de uso del hosting.",
     "database-name-must-be-lowercase": "O nome da base de dados deve estar em minúsculas",
     "date": "Data",
     "date-in": "Data em",
@@ -805,6 +807,8 @@
     "invalid-iso-code": "Código ISO '%iso-code%' não válido",
     "invalid-number": "Número não válido: %number%",
     "invalid-request": "Pedido não válido",
+    "invalid-token": "Token no válido",
+    "invalid-token-p": "El token de acceso para el archivo %file% no es válido o ha caducado",
     "invalid-user-can-permission": "Permissão inválida: %permission%. As permissões disponíveis são access, delete, export, import, update e only-owner-data.",
     "invalid-web": "E",
     "invoice": "Fatura",
@@ -1648,6 +1652,8 @@
     "unlink-install-ok": "Instalação removida do registro corretamente.",
     "unlock-entry": "Desbloquear",
     "unpaid": "Impago",
+    "unsafe-file": "Archivo no seguro",
+    "unsafe-file-p": "Por motivos de seguridad impedimos las descargas de algunos tipos de archivos, como este: %file%",
     "until-accounting-entry": "Até lançamento contábil",
     "until-date": "Até",
     "until-subaccount": "Até subconta",
