--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -389,6 +389,8 @@
     "data-source": "Dades d'origen",
     "database": "Base de dades",
     "database-error": "Error en connectar a la base de dades",
+    "database-error-pc": "🖥️ Si el programa está instalado en tu PC, probablemente se te haya olvidado activar MySQL o tenga problemas para activarse.",
+    "database-error-server": "🌎 si el programa está instalado en un servidor o hosting, probablemente hayas cambiado el usuario o contraseña de la base de datos, o hayas llegado a algún límite de uso del hosting.",
     "database-name-must-be-lowercase": "El nom de la base de dades ha de ser en minúscules",
     "date": "Data",
     "date-in": "Data d'entrada",
@@ -805,6 +807,8 @@
     "invalid-iso-code": "Codi ISO '%iso-code%' no vàlid",
     "invalid-number": "Número no vàlid: %number%",
     "invalid-request": "Petició no vàlida",
+    "invalid-token": "Token no válido",
+    "invalid-token-p": "El token de acceso para el archivo %file% no es válido o ha caducado",
     "invalid-user-can-permission": "Permís no vàlid: %permission%. Els permisos disponibles són access, delete, export, import, update i only-owner-data.",
     "invalid-web": "Adreça web no vàlida",
     "invoice": "Factura",
@@ -1648,6 +1652,8 @@
     "unlink-install-ok": "Instal·lació esborrada del registre correctament.",
     "unlock-entry": "Desbloquejar",
     "unpaid": "Impagat",
+    "unsafe-file": "Archivo no seguro",
+    "unsafe-file-p": "Por motivos de seguridad impedimos las descargas de algunos tipos de archivos, como este: %file%",
     "until-accounting-entry": "Fins a assentament",
     "until-date": "Fins (data)",
     "until-subaccount": "Fins a subcompte",
