--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -389,6 +389,8 @@
     "data-source": "Jatorrizko datuak",
     "database": "Datu basea",
     "database-error": "Errorea datubasearekin konetatzerakoan",
+    "database-error-pc": "🖥️ Si el programa está instalado en tu PC, probablemente se te haya olvidado activar MySQL o tenga problemas para activarse.",
+    "database-error-server": "🌎 si el programa está instalado en un servidor o hosting, probablemente hayas cambiado el usuario o contraseña de la base de datos, o hayas llegado a algún límite de uso del hosting.",
     "database-name-must-be-lowercase": "Datu-basearen izena minuskuletan izan behar du",
     "date": "Data",
     "date-in": "Sarrera data",
@@ -805,6 +807,8 @@
     "invalid-iso-code": "Código ISO '%iso-code%' ez da zuzena",
     "invalid-number": "Zenbaki baliogabea: %number%",
     "invalid-request": "Eskaera baliogabea",
+    "invalid-token": "Token no válido",
+    "invalid-token-p": "El token de acceso para el archivo %file% no es válido o ha caducado",
     "invalid-user-can-permission": "Baimen baliogabea: %permission%. Eskuragarri dauden baimenak atzitu, ezabatu, esportatu, inportatu, eguneratu eta jabe bakarraren datuak dira.",
     "invalid-web": "Web helbide baliogabea",
     "invoice": "Faktura",
@@ -1414,7 +1418,7 @@
     "serierb": "RB seriea",
     "series": "Serieak",
     "server": "Zerbitzaria",
-    "server-software": "Servidor software",
+    "server-software": "Zerver software",
     "service": "Zerbitzua",
     "services": "Zerbitzuak",
     "settings": "Ezarpenak",
@@ -1648,6 +1652,8 @@
     "unlink-install-ok": "Instalazioa ondo ezabatu da erregistrotik.",
     "unlock-entry": "Desblokeatu",
     "unpaid": "Ordaindu gabe",
+    "unsafe-file": "Archivo no seguro",
+    "unsafe-file-p": "Por motivos de seguridad impedimos las descargas de algunos tipos de archivos, como este: %file%",
     "until-accounting-entry": "Idazpenara arte",
     "until-date": "Data arte",
     "until-subaccount": "Azpikontura arte",
